[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/spritesheets/trainers/harald.png" type="Texture" id=1]
[ext_resource path="res://source/actor/Actor.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "move_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}

[sub_resource type="Animation" id=5]
resource_name = "stand_down"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stand_left"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=7]
resource_name = "stand_right"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[node name="Actor" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 0, -6 )

[node name="Sprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )
vframes = 9
hframes = 9
frame = 1

[node name="Animation" type="Node2D" parent="."]

[node name="BodyAnimation" type="AnimationPlayer" parent="Animation"]
anims/move_down = SubResource( 1 )
anims/move_left = SubResource( 2 )
anims/move_right = SubResource( 3 )
anims/move_up = SubResource( 4 )
anims/stand_down = SubResource( 5 )
anims/stand_left = SubResource( 6 )
anims/stand_right = SubResource( 7 )
anims/stand_up = SubResource( 8 )

[node name="MovementTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="MovementTween" to="." method="_on_MovementTween_tween_all_completed"]
